; ModuleID = '/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_players.c_CG_PlayerFlag.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_players.c_CG_PlayerFlag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_24__ = type { i32*, %struct.TYPE_18__ }
%struct.TYPE_18__ = type { i32, i32 }
%struct.TYPE_23__ = type { %struct.TYPE_21__, %struct.TYPE_20__ }
%struct.TYPE_21__ = type { %struct.TYPE_17__ }
%struct.TYPE_17__ = type { i32, i32, i32, i32, i32 }
%struct.TYPE_20__ = type { i32, i64, %struct.TYPE_19__ }
%struct.TYPE_19__ = type { i32* }
%struct.TYPE_22__ = type { i32*, i32, i32*, i32, i32, i32, i32, i32, i32 }

@cgs = common dso_local global %struct.TYPE_24__ zeroinitializer, align 8
@.str = private unnamed_addr constant [9 x i8] c"tag_flag\00", align 1
@qfalse = common dso_local global i32 0, align 4
@ANIM_TOGGLEBIT = common dso_local global i32 0, align 4
@LEGS_IDLE = common dso_local global i32 0, align 4
@LEGS_IDLECR = common dso_local global i32 0, align 4
@FLAG_STAND = common dso_local global i32 0, align 4
@LEGS_WALK = common dso_local global i32 0, align 4
@LEGS_WALKCR = common dso_local global i32 0, align 4
@qtrue = common dso_local global i32 0, align 4
@FLAG_RUN = common dso_local global i32 0, align 4
@M_PI = common dso_local global float 0.000000e+00, align 4
@YAW = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_23__*, i32, %struct.TYPE_22__*)* @CG_PlayerFlag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CG_PlayerFlag(%struct.TYPE_23__* %0, i32 %1, %struct.TYPE_22__* %2) #0 {
  %4 = alloca %struct.TYPE_23__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_22__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_22__, align 8
  %9 = alloca %struct.TYPE_22__, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca float, align 4
  %16 = alloca float, align 4
  store %struct.TYPE_23__* %0, %struct.TYPE_23__** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.TYPE_22__* %2, %struct.TYPE_22__** %6, align 8
  %17 = call i32 @memset(%struct.TYPE_22__* %8, i32 0, i32 48)
  %18 = load i32, i32* getelementptr inbounds (%struct.TYPE_24__, %struct.TYPE_24__* @cgs, i32 0, i32 1, i32 1), align 4
  %19 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %8, i32 0, i32 1
  store i32 %18, i32* %19, align 8
  %20 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %21 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %20, i32 0, i32 0
  %22 = load i32*, i32** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %8, i32 0, i32 0
  %24 = load i32*, i32** %23, align 8
  %25 = call i32 @VectorCopy(i32* %22, i32* %24)
  %26 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %26, i32 0, i32 7
  %28 = load i32, i32* %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %8, i32 0, i32 7
  store i32 %28, i32* %29, align 8
  %30 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %31 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %30, i32 0, i32 6
  %32 = load i32, i32* %31, align 4
  %33 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %8, i32 0, i32 6
  store i32 %32, i32* %33, align 4
  %34 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %35 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %36 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = call i32 @CG_PositionEntityOnTag(%struct.TYPE_22__* %8, %struct.TYPE_22__* %34, i32 %37, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %39 = call i32 @trap_R_AddRefEntityToScene(%struct.TYPE_22__* %8)
  %40 = call i32 @memset(%struct.TYPE_22__* %9, i32 0, i32 48)
  %41 = load i32, i32* getelementptr inbounds (%struct.TYPE_24__, %struct.TYPE_24__* @cgs, i32 0, i32 1, i32 0), align 8
  %42 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 1
  store i32 %41, i32* %42, align 8
  %43 = load i32, i32* %5, align 4
  %44 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 8
  store i32 %43, i32* %44, align 4
  %45 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %46 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %45, i32 0, i32 0
  %47 = load i32*, i32** %46, align 8
  %48 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 0
  %49 = load i32*, i32** %48, align 8
  %50 = call i32 @VectorCopy(i32* %47, i32* %49)
  %51 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %52 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %51, i32 0, i32 7
  %53 = load i32, i32* %52, align 8
  %54 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 7
  store i32 %53, i32* %54, align 8
  %55 = load %struct.TYPE_22__*, %struct.TYPE_22__** %6, align 8
  %56 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %55, i32 0, i32 6
  %57 = load i32, i32* %56, align 4
  %58 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 6
  store i32 %57, i32* %58, align 4
  %59 = load i32*, i32** %10, align 8
  %60 = call i32 @VectorClear(i32* %59)
  %61 = load i32, i32* @qfalse, align 4
  store i32 %61, i32* %14, align 4
  %62 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %63 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %62, i32 0, i32 1
  %64 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %63, i32 0, i32 0
  %65 = load i32, i32* %64, align 8
  %66 = load i32, i32* @ANIM_TOGGLEBIT, align 4
  %67 = xor i32 %66, -1
  %68 = and i32 %65, %67
  store i32 %68, i32* %12, align 4
  %69 = load i32, i32* %12, align 4
  %70 = load i32, i32* @LEGS_IDLE, align 4
  %71 = icmp eq i32 %69, %70
  br i1 %71, label %76, label %72

72:                                               ; preds = %3
  %73 = load i32, i32* %12, align 4
  %74 = load i32, i32* @LEGS_IDLECR, align 4
  %75 = icmp eq i32 %73, %74
  br i1 %75, label %76, label %78

76:                                               ; preds = %72, %3
  %77 = load i32, i32* @FLAG_STAND, align 4
  store i32 %77, i32* %13, align 4
  br label %93

78:                                               ; preds = %72
  %79 = load i32, i32* %12, align 4
  %80 = load i32, i32* @LEGS_WALK, align 4
  %81 = icmp eq i32 %79, %80
  br i1 %81, label %86, label %82

82:                                               ; preds = %78
  %83 = load i32, i32* %12, align 4
  %84 = load i32, i32* @LEGS_WALKCR, align 4
  %85 = icmp eq i32 %83, %84
  br i1 %85, label %86, label %89

86:                                               ; preds = %82, %78
  %87 = load i32, i32* @FLAG_STAND, align 4
  store i32 %87, i32* %13, align 4
  %88 = load i32, i32* @qtrue, align 4
  store i32 %88, i32* %14, align 4
  br label %92

89:                                               ; preds = %82
  %90 = load i32, i32* @FLAG_RUN, align 4
  store i32 %90, i32* %13, align 4
  %91 = load i32, i32* @qtrue, align 4
  store i32 %91, i32* %14, align 4
  br label %92

92:                                               ; preds = %89, %86
  br label %93

93:                                               ; preds = %92, %76
  %94 = load i32, i32* %14, align 4
  %95 = icmp ne i32 %94, 0
  br i1 %95, label %96, label %203

96:                                               ; preds = %93
  %97 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %98 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %97, i32 0, i32 1
  %99 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %98, i32 0, i32 2
  %100 = getelementptr inbounds %struct.TYPE_19__, %struct.TYPE_19__* %99, i32 0, i32 0
  %101 = load i32*, i32** %100, align 8
  %102 = load i32*, i32** %11, align 8
  %103 = call i32 @VectorCopy(i32* %101, i32* %102)
  %104 = load i32*, i32** %11, align 8
  %105 = getelementptr inbounds i32, i32* %104, i64 2
  %106 = load i32, i32* %105, align 4
  %107 = add nsw i32 %106, 100
  store i32 %107, i32* %105, align 4
  %108 = load i32*, i32** %11, align 8
  %109 = call i32 @VectorNormalize(i32* %108)
  %110 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %8, i32 0, i32 2
  %111 = load i32*, i32** %110, align 8
  %112 = getelementptr inbounds i32, i32* %111, i64 2
  %113 = load i32, i32* %112, align 4
  %114 = load i32*, i32** %11, align 8
  %115 = call float @DotProduct(i32 %113, i32* %114)
  store float %115, float* %16, align 4
  %116 = load float, float* %16, align 4
  %117 = call double @fabs(float %116)
  %118 = fcmp olt double %117, 9.000000e-01
  br i1 %118, label %119, label %202

119:                                              ; preds = %96
  %120 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %8, i32 0, i32 2
  %121 = load i32*, i32** %120, align 8
  %122 = getelementptr inbounds i32, i32* %121, i64 0
  %123 = load i32, i32* %122, align 4
  %124 = load i32*, i32** %11, align 8
  %125 = call float @DotProduct(i32 %123, i32* %124)
  store float %125, float* %16, align 4
  %126 = load float, float* %16, align 4
  %127 = fcmp ogt float %126, 1.000000e+00
  br i1 %127, label %128, label %129

128:                                              ; preds = %119
  store float 1.000000e+00, float* %16, align 4
  br label %134

129:                                              ; preds = %119
  %130 = load float, float* %16, align 4
  %131 = fcmp olt float %130, -1.000000e+00
  br i1 %131, label %132, label %133

132:                                              ; preds = %129
  store float -1.000000e+00, float* %16, align 4
  br label %133

133:                                              ; preds = %132, %129
  br label %134

134:                                              ; preds = %133, %128
  %135 = load float, float* %16, align 4
  %136 = call float @acos(float %135)
  store float %136, float* %15, align 4
  %137 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %8, i32 0, i32 2
  %138 = load i32*, i32** %137, align 8
  %139 = getelementptr inbounds i32, i32* %138, i64 1
  %140 = load i32, i32* %139, align 4
  %141 = load i32*, i32** %11, align 8
  %142 = call float @DotProduct(i32 %140, i32* %141)
  store float %142, float* %16, align 4
  %143 = load float, float* %16, align 4
  %144 = fcmp olt float %143, 0.000000e+00
  br i1 %144, label %145, label %155

145:                                              ; preds = %134
  %146 = load float, float* %15, align 4
  %147 = fmul float %146, 1.800000e+02
  %148 = load float, float* @M_PI, align 4
  %149 = fdiv float %147, %148
  %150 = fsub float 3.600000e+02, %149
  %151 = fptosi float %150 to i32
  %152 = load i32*, i32** %10, align 8
  %153 = load i64, i64* @YAW, align 8
  %154 = getelementptr inbounds i32, i32* %152, i64 %153
  store i32 %151, i32* %154, align 4
  br label %164

155:                                              ; preds = %134
  %156 = load float, float* %15, align 4
  %157 = fmul float %156, 1.800000e+02
  %158 = load float, float* @M_PI, align 4
  %159 = fdiv float %157, %158
  %160 = fptosi float %159 to i32
  %161 = load i32*, i32** %10, align 8
  %162 = load i64, i64* @YAW, align 8
  %163 = getelementptr inbounds i32, i32* %161, i64 %162
  store i32 %160, i32* %163, align 4
  br label %164

164:                                              ; preds = %155, %145
  %165 = load i32*, i32** %10, align 8
  %166 = load i64, i64* @YAW, align 8
  %167 = getelementptr inbounds i32, i32* %165, i64 %166
  %168 = load i32, i32* %167, align 4
  %169 = icmp slt i32 %168, 0
  br i1 %169, label %170, label %176

170:                                              ; preds = %164
  %171 = load i32*, i32** %10, align 8
  %172 = load i64, i64* @YAW, align 8
  %173 = getelementptr inbounds i32, i32* %171, i64 %172
  %174 = load i32, i32* %173, align 4
  %175 = add nsw i32 %174, 360
  store i32 %175, i32* %173, align 4
  br label %176

176:                                              ; preds = %170, %164
  %177 = load i32*, i32** %10, align 8
  %178 = load i64, i64* @YAW, align 8
  %179 = getelementptr inbounds i32, i32* %177, i64 %178
  %180 = load i32, i32* %179, align 4
  %181 = icmp sgt i32 %180, 360
  br i1 %181, label %182, label %188

182:                                              ; preds = %176
  %183 = load i32*, i32** %10, align 8
  %184 = load i64, i64* @YAW, align 8
  %185 = getelementptr inbounds i32, i32* %183, i64 %184
  %186 = load i32, i32* %185, align 4
  %187 = sub nsw i32 %186, 360
  store i32 %187, i32* %185, align 4
  br label %188

188:                                              ; preds = %182, %176
  %189 = load i32*, i32** %10, align 8
  %190 = load i64, i64* @YAW, align 8
  %191 = getelementptr inbounds i32, i32* %189, i64 %190
  %192 = load i32, i32* %191, align 4
  %193 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %194 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %193, i32 0, i32 0
  %195 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %194, i32 0, i32 0
  %196 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %195, i32 0, i32 0
  %197 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %198 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %197, i32 0, i32 0
  %199 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %198, i32 0, i32 0
  %200 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %199, i32 0, i32 4
  %201 = call i32 @CG_SwingAngles(i32 %192, i32 25, i32 90, float 0x3FC3333340000000, i32* %196, i32* %200)
  br label %202

202:                                              ; preds = %188, %96
  br label %203

203:                                              ; preds = %202, %93
  %204 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %205 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %204, i32 0, i32 0
  %206 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %205, i32 0, i32 0
  %207 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %206, i32 0, i32 0
  %208 = load i32, i32* %207, align 8
  %209 = load i32*, i32** %10, align 8
  %210 = load i64, i64* @YAW, align 8
  %211 = getelementptr inbounds i32, i32* %209, i64 %210
  store i32 %208, i32* %211, align 4
  %212 = load i32*, i32** getelementptr inbounds (%struct.TYPE_24__, %struct.TYPE_24__* @cgs, i32 0, i32 0), align 8
  %213 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %214 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %213, i32 0, i32 1
  %215 = getelementptr inbounds %struct.TYPE_20__, %struct.TYPE_20__* %214, i32 0, i32 1
  %216 = load i64, i64* %215, align 8
  %217 = getelementptr inbounds i32, i32* %212, i64 %216
  store i32* %217, i32** %7, align 8
  %218 = load i32*, i32** %7, align 8
  %219 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %220 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %219, i32 0, i32 0
  %221 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %220, i32 0, i32 0
  %222 = load i32, i32* %13, align 4
  %223 = call i32 @CG_RunLerpFrame(i32* %218, %struct.TYPE_17__* %221, i32 %222, i32 1)
  %224 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %225 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %224, i32 0, i32 0
  %226 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %225, i32 0, i32 0
  %227 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %226, i32 0, i32 3
  %228 = load i32, i32* %227, align 4
  %229 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 5
  store i32 %228, i32* %229, align 8
  %230 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %231 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %230, i32 0, i32 0
  %232 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %231, i32 0, i32 0
  %233 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %232, i32 0, i32 2
  %234 = load i32, i32* %233, align 8
  %235 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 4
  store i32 %234, i32* %235, align 4
  %236 = load %struct.TYPE_23__*, %struct.TYPE_23__** %4, align 8
  %237 = getelementptr inbounds %struct.TYPE_23__, %struct.TYPE_23__* %236, i32 0, i32 0
  %238 = getelementptr inbounds %struct.TYPE_21__, %struct.TYPE_21__* %237, i32 0, i32 0
  %239 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %238, i32 0, i32 1
  %240 = load i32, i32* %239, align 4
  %241 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 3
  store i32 %240, i32* %241, align 8
  %242 = load i32*, i32** %10, align 8
  %243 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %9, i32 0, i32 2
  %244 = load i32*, i32** %243, align 8
  %245 = call i32 @AnglesToAxis(i32* %242, i32* %244)
  %246 = getelementptr inbounds %struct.TYPE_22__, %struct.TYPE_22__* %8, i32 0, i32 1
  %247 = load i32, i32* %246, align 8
  %248 = call i32 @CG_PositionRotatedEntityOnTag(%struct.TYPE_22__* %9, %struct.TYPE_22__* %8, i32 %247, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %249 = call i32 @trap_R_AddRefEntityToScene(%struct.TYPE_22__* %9)
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_22__*, i32, i32) #1

declare dso_local i32 @VectorCopy(i32*, i32*) #1

declare dso_local i32 @CG_PositionEntityOnTag(%struct.TYPE_22__*, %struct.TYPE_22__*, i32, i8*) #1

declare dso_local i32 @trap_R_AddRefEntityToScene(%struct.TYPE_22__*) #1

declare dso_local i32 @VectorClear(i32*) #1

declare dso_local i32 @VectorNormalize(i32*) #1

declare dso_local float @DotProduct(i32, i32*) #1

declare dso_local double @fabs(float) #1

declare dso_local float @acos(float) #1

declare dso_local i32 @CG_SwingAngles(i32, i32, i32, float, i32*, i32*) #1

declare dso_local i32 @CG_RunLerpFrame(i32*, %struct.TYPE_17__*, i32, i32) #1

declare dso_local i32 @AnglesToAxis(i32*, i32*) #1

declare dso_local i32 @CG_PositionRotatedEntityOnTag(%struct.TYPE_22__*, %struct.TYPE_22__*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
